--- a/notebooks/DatasetTable.ipynb
+++ b/notebooks/DatasetTable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,9 +10,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import sys\n",
-    "sys.path.append('/home/eduardo/PycharmProjects/treemap-analysis')\n",
+    "sys.path.append('/home/eduardo/PycharmProjects/treemap-analysis/code')\n",
     "\n",
-    "import Parser\n"
+    "import Parser"
    ]
   },
   {
@@ -56,8 +56,7 @@
     "                        'Avg. leaf depth' : [avg_leaf_depth],\n",
     "                        'Avg. tree depth' : [avg_max_depth]})\n",
     "    row = row[['Dataset', 'Revisions', 'Nodes (Total)', 'Avg. leaf depth', 'Avg. tree depth']]\n",
-    "    return row\n",
-    "\n"
+    "    return row"
    ]
   },
   {
@@ -535,7 +534,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -546,5 +545,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
