Boxplot and scatter code.

--- a/notebooks/RankTable.ipynb
+++ b/notebooks/RankTable.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Weighted Pearson Rank"
+    "# Compute "
    ]
   },
   {
@@ -62,7 +62,10 @@
     }
    ],
    "source": [
-    "wp_sheet = pd.DataFrame()        \n",
+    "p_sheet = pd.DataFrame()\n",
+    "wp_sheet = pd.DataFrame()\n",
+    "\n",
+    "\n",
     "for dataset_id in dataset_list[3]:\n",
     "    results_for_dataset = []\n",
     "    for technique_id in technique_list:\n",
