Add relative position change metric.

--- a/notebooks/TimeBoxplot.ipynb
+++ b/notebooks/TimeBoxplot.ipynb
@@ -135,7 +135,6 @@
     "    ax.set_ylim([0, .75])\n",
     "    ax.set_yticks([0, .25, .5, .75], minor=False)\n",
     "    ax.set_yticklabels([0, .25, .5, .75], fontdict=None, minor=False)\n",
-    "    break\n",
     " \n",
     "fig.savefig('time/svg/' + dataset_id + '_spatial.svg', format='svg', dpi=1200)"
    ]
@@ -154,44 +153,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "technique_list = Parser.list_techniques()\n",
-    "nrow = 7\n",
-    "ncol = 2\n",
-    "fig, axs = plt.subplots(nrow, ncol, sharex=True, sharey=True, figsize=(cm2inch(20), cm2inch(2*22)))\n",
-    "fig.delaxes(axs[6, 1])\n",
-    "fig.tight_layout()\n",
-    "for i, ax in enumerate(fig.axes):\n",
-    "    ax.set_title(technique_list[i].upper())\n",
-    "\n",
-    "    data = []\n",
-    "    history = Parser.parse_rectangles(technique_list[i], dataset_id)\n",
-    "    for i in range(1, len(history)):\n",
-    "        df = TemporalMetrics.delta_vis(history[i - 1], history[i])\n",
-    "        df = pd.merge(df, TemporalMetrics.delta_data_by_area(history[i - 1], history[i]))\n",
-    "        df = pd.merge(df, TemporalMetrics.relative_weight(history[i - 1], history[i]))\n",
-    "\n",
-    "        df_stab = TemporalMetrics.q_ratio(df)\n",
-    "        df_stab = pd.merge(df_stab, TemporalMetrics.q_weighted_ratio(df))\n",
-    "        \n",
-    "        column = 't' + str(i)\n",
-    "        data.append(df_stab.mean(axis=1))\n",
-    "\n",
-    "    bp = ax.boxplot(data, whis=[5, 95], showfliers=False, patch_artist=True, widths=1);\n",
-    "    \n",
-    "    ax.set_ylim(ymin=-0.05)\n",
-    "    ax.set_yticks([0, .25, .5, .75], minor=False)\n",
-    "    ax.set_yticklabels([0, .25, .5, .75], fontdict=None, minor=False)\n",
-    "    styleBoxplot(bp, ax, len(data))\n",
-    "\n",
-    "fig.savefig('time/svg/' + dataset_id + '_stab.svg', format='svg', dpi=1200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# technique_list = Parser.list_techniques()\n",
     "# nrow = 7\n",
     "# ncol = 2\n",
@@ -208,14 +169,20 @@
     "#         df = pd.merge(df, TemporalMetrics.delta_data_by_area(history[i - 1], history[i]))\n",
     "#         df = pd.merge(df, TemporalMetrics.relative_weight(history[i - 1], history[i]))\n",
     "\n",
-    "#         data.append(TemporalMetrics.q_ratio(df)['q_ratio'])\n",
+    "#         df_stab = TemporalMetrics.q_ratio(df)\n",
+    "#         df_stab = pd.merge(df_stab, TemporalMetrics.q_weighted_ratio(df))\n",
     "        \n",
+    "#         column = 't' + str(i)\n",
+    "#         data.append(df_stab.mean(axis=1))\n",
     "\n",
     "#     bp = ax.boxplot(data, whis=[5, 95], showfliers=False, patch_artist=True, widths=1);\n",
     "    \n",
+    "#     ax.set_ylim(ymin=-0.05)\n",
+    "#     ax.set_yticks([0, .25, .5, .75], minor=False)\n",
+    "#     ax.set_yticklabels([0, .25, .5, .75], fontdict=None, minor=False)\n",
     "#     styleBoxplot(bp, ax, len(data))\n",
     "\n",
-    "# # fig.savefig('time-notebooks/svg/' + dataset_id + '_stab_unweighted.svg', format='svg', dpi=1200)"
+    "# fig.savefig('time/svg/' + dataset_id + '_stab.svg', format='svg', dpi=1200)"
    ]
   },
   {
@@ -223,32 +190,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# technique_list = Parser.list_techniques()\n",
-    "# nrow = 7\n",
-    "# ncol = 2\n",
-    "# fig, axs = plt.subplots(nrow, ncol, sharex=True, sharey=True, figsize=(cm2inch(20), cm2inch(2*22)))\n",
-    "# fig.delaxes(axs[6, 1])\n",
-    "# fig.tight_layout()\n",
-    "# for i, ax in enumerate(fig.axes):\n",
-    "#     ax.set_title(technique_list[i].upper())\n",
-    "\n",
-    "#     data = []\n",
-    "#     history = Parser.parse_rectangles(technique_list[i], dataset_id)\n",
-    "#     for i in range(1, len(history)):\n",
-    "#         df = TemporalMetrics.delta_vis(history[i - 1], history[i])\n",
-    "#         df = pd.merge(df, TemporalMetrics.delta_data_by_area(history[i - 1], history[i]))\n",
-    "#         df = pd.merge(df, TemporalMetrics.relative_weight(history[i - 1], history[i]))\n",
-    "\n",
-    "#         data.append(TemporalMetrics.q_weighted_ratio(df)['q_w_ratio'])\n",
-    "        \n",
-    "\n",
-    "#     bp = ax.boxplot(data, whis=[5, 95], showfliers=False, patch_artist=True, widths=1);\n",
-    "    \n",
-    "#     styleBoxplot(bp, ax, len(data))\n",
-    "\n",
-    "# # fig.savefig('time-notebooks/svg/' + dataset_id + '_stab_weighted.svg', format='svg', dpi=1200)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
